<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="@dimen/horizontal_padding"
    android:paddingTop="@dimen/vertical_padding"
    tools:context=".ui.activities.ProductDetailActivity">
    
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/top_bar"
        android:layout_width="0dp"
        android:layout_height="@dimen/top_bar_height"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/back_button"
            android:layout_width="@dimen/back_button_size"
            android:layout_height="@dimen/back_button_size"
            android:background="@color/transparent"
            android:src="@drawable/ic_back"
            android:tint="@color/primaryTextColor"/>
        
    </androidx.appcompat.widget.LinearLayoutCompat>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/product_info_padding">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/image_pager"
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_product_img_size"/>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_indicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabBackground="@drawable/tab_pager_selector"
                app:tabGravity="center"
                android:background="@color/transparent"
                app:tabIndicatorHeight="0dp"
                app:tabPaddingEnd="@dimen/dot_indicator_size"
                app:tabPaddingStart="@dimen/dot_indicator_size"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/product_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:ellipsize="end"
                android:textStyle="bold"
                android:textSize="@dimen/h2_size"
                android:layout_marginTop="@dimen/vertical_padding"
                android:textColor="@color/primaryTextColor"
                tools:text="ovijnz, nzon oz, on   "/>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/average_note_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:textColor="@color/yellow_star"
                    android:textSize="@dimen/regular_size"
                    android:textStyle="bold"
                    tools:text="4.6/5"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:layout_marginStart="@dimen/text_separator_margin"
                    android:layout_marginEnd="@dimen/text_separator_margin"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/regular_size"
                    android:text="@string/horizontal_separator_char"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/nb_reviews_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/regular_size"
                    tools:text="58"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/regular_size"
                    android:text="@string/opinion"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/regular_size"
                android:linksClickable="true"
                android:layout_marginVertical="@dimen/vertical_padding"/>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/new_best_price_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:textColor="@color/red"
                    android:textSize="@dimen/h3_size"
                    android:text="@string/price_new"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/new_best_price_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:textStyle="bold"
                    android:textColor="@color/red"
                    android:textSize="@dimen/h1_size"
                    android:layout_marginStart="@dimen/text_separator_margin"
                    tools:text="909 €"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/used_best_price_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/h3_size"
                    android:text="@string/price_used"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/used_best_price_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:textStyle="bold"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/h1_size"
                    android:layout_marginStart="@dimen/text_separator_margin"
                    tools:text="809,99 €"/>

            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add_to_cart_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/add_to_cart_button_height"
                android:layout_marginTop="@dimen/add_to_cart_button_margin_top"
                android:text="@string/add_cart"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@color/red" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>